Bug 385336 - Minimap doesn't display cyrillic characters
Summary: Minimap doesn't display cyrillic characters
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: part (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-03 16:39 UTC by Алексей Шилин
Modified: 2017-10-04 05:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.39.0
Sentry Crash Report:


Attachments
Screenshot illustrating the cyrillic characters display issue in Kate minimap (40.14 KB, image/png)
2017-10-03 16:39 UTC, Алексей Шилин
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Алексей Шилин 2017-10-03 16:39:37 UTC
Created attachment 108149 [details]
Screenshot illustrating the cyrillic characters display issue in Kate minimap

Hi,

Kate part minimap doesn't display cyrillic (and probably other non-latin) characters. See the attached screenshot.
Comment 1 Kåre Särs 2017-10-04 05:44:33 UTC
Git commit af3e9946fc0f9bbb501490fcf722cde31cedb8f4 by Kåre Särs.
Committed on 04/10/2017 at 05:36.
Pushed by sars into branch 'master'.

Fix the fall-back "blackness" value for unicode > 255 characters.
FIXED-IN: 5.39.0
CCMAIL: mail@svenbrauch.de

M  +1    -1    src/view/kateviewhelpers.cpp

https://commits.kde.org/ktexteditor/af3e9946fc0f9bbb501490fcf722cde31cedb8f4