Fix the fall-back "blackness" value for unicode > 255 characters.

BUG: 385336
FIXED-IN: 5.39.0
CCMAIL: mail@svenbrauch.de